1. 修改 travis 脚本 2. package.json 递增版本号，并添加执行脚本。 3. 按代码规范检查结果优化代码 4. 仓库说明添加 travis 徽章和鸣谢 ----- 提交人：镜画者，发现有任何问题请联系我：pmtnmd@163.com。 Commit by Meler Paine, found any problem please contact: pmtnmd@163.com.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "hexo-generator-category-enhance",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Category generator for Hexo.",
   "main": "index",
   "scripts": {
+    "eslint": "eslint .",
+    "jscs": "jscs ."
   },
   "directories": {
     "lib": "./lib"
