--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   # 测试代码还不完善，暂时隐藏。
   # - npm run test-cov
 
-after_script:
+# after_script:
   # 测试代码还不完善，暂时隐藏。
   # - npm install coveralls
   # - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
