--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 
 sudo: false
 
-cache:
-  apt: true
-  directories:
-    - node_modules
+# cache:
+#   apt: true
+#   directories:
+#     - node_modules
 
 node_js:
   - "5"
